--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 
 	<meta name="theme-color" content="#00FFFF">
 	<meta property="og:title" content="Yas_!_ru's Website">
-	<meta property="og:image" content="/images/favicon.png">
+	<meta property="og:image" content="/ItsYasiru/images/favicon.png">
 
 	<title>Yas_!_ru's Website</title>
 
-	<link rel="stylesheet" href="/css/index.css">
-    <link rel="icon" href="/images/favicon.png" type="image/x-icon">
+	<link rel="stylesheet" href="/ItsYasiru/css/index.css">
+    <link rel="icon" href="/ItsYasiru/images/favicon.png" type="image/x-icon">
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-YDCFQGQZB8"></script>
@@ -51,7 +51,7 @@
 		<div class="leftColumn">
 			<div id="about-me" class="card">
 				<h2>About Me</h2>
-				<center><img width=90% height=90% alt="Failed to load image!" src="/images/profile-picture.jpg"></center>
+				<center><img width=90% height=90% alt="Failed to load image!" src="/ItsYasiru/images/profile-picture.jpg"></center>
 				<p>
 					I'm 16 years old studying in high school for my 2023 GCE AL's at <a title="Respice Finem" href="https://www.trinitycollege.lk" target="_blank">Trinity College Kandy</a>.
 					<br><br>
@@ -81,11 +81,11 @@
 					<img title="Languages I've worked with ~ Github statistics" width=100% height=100% src="https://github-readme-stats.vercel.app/api/top-langs/?username=ItsYasiru&hide_title=true&layout=compact&hide_border=true">
 					<br><br>
 					<div align="center">
-						<img class="icon" src="/icons/visual-studio-code.png">
-						<img class="icon" src="/icons/python.png">
-						<img class="icon" src="/icons/javascript.png">
-						<img class="icon" src="/icons/css.png">
-						<img class="icon" src="/icons/html.png">
+						<img class="icon" src="/ItsYasiru/icons/visual-studio-code.png">
+						<img class="icon" src="/ItsYasiru/icons/python.png">
+						<img class="icon" src="/ItsYasiru/icons/javascript.png">
+						<img class="icon" src="/ItsYasiru/icons/css.png">
+						<img class="icon" src="/ItsYasiru/icons/html.png">
 					</div>
 				</div>
 
@@ -219,7 +219,7 @@
 		<p>This website was built by @Yas_!_ru with HTML & CSS. Hosted on Github pages.</p>
 	</footer>
 
-	<script src="/scripts/index.js"></script>
+	<script src="/ItsYasiru/scripts/index.js"></script>
 	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
