Shadows and some minor changes

--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<!-- Metadata -->
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="initial-scale=1, width=device-width, height=device-height">
-
 	<meta name="theme-color" content="#00FFFF">
 	<meta property="og:title" content="Yas_!_ru's Website">
 	<meta property="og:image" content="/ItsYasiru/images/favicon.png">
 
 	<title>Yas_!_ru's Website</title>
 
+	<!-- Favicons -->
 	<link rel="stylesheet" href="/ItsYasiru/css/index.css">
     <link rel="icon" href="/ItsYasiru/images/favicon.png" type="image/x-icon">
 
@@ -26,11 +27,13 @@
 </head>
 
 <body>
+	<!-- Mobile nav button -->
 	<button onclick="openMenu()" id="menu-open-btn" class="right">
 		<div></div>
 		<div></div>
 		<div></div>
 	</button>
+
 	<header>
 		<h1>Yas_!_ru's Website</h1>
 		<p id="lable">My name is Yasiru and I like to code as a hobby.</p>
@@ -48,10 +51,10 @@
 	</nav>
 
 	<row>
-		<div class="leftColumn">
+		<div class="left-column">
 			<div id="about-me" class="card">
 				<h2>About Me</h2>
-				<center><img width=90% height=90% alt="Failed to load image!" src="/ItsYasiru/images/profile-picture.jpg"></center>
+				<center><img width=90% height=90% alt="Failed to load image!" src="images/profile-picture.jpg"></center>
 				<p>
 					I'm 16 years old studying in high school for my 2023 GCE AL's at <a title="Respice Finem" href="https://www.trinitycollege.lk" target="_blank">Trinity College Kandy</a>.
 					<br><br>
@@ -71,7 +74,7 @@
 			</div>
 		</div>
 
-		<div class="rightColumn">
+		<div class="right-column">
 			<div id="skill-set" class="card">
 				<div class="leftContainer">
 					<h2>Skill Set</h2>
@@ -81,11 +84,11 @@
 					<img title="Languages I've worked with ~ Github statistics" width=100% height=100% src="https://github-readme-stats.vercel.app/api/top-langs/?username=ItsYasiru&hide_title=true&layout=compact&hide_border=true">
 					<br><br>
 					<div align="center">
-						<img class="icon" src="/ItsYasiru/icons/visual-studio-code.png">
-						<img class="icon" src="/ItsYasiru/icons/python.png">
-						<img class="icon" src="/ItsYasiru/icons/javascript.png">
-						<img class="icon" src="/ItsYasiru/icons/css.png">
-						<img class="icon" src="/ItsYasiru/icons/html.png">
+						<img class="icon" src="icons/visual-studio-code.png">
+						<img class="icon" src="icons/python.png">
+						<img class="icon" src="icons/javascript.png">
+						<img class="icon" src="icons/css.png">
+						<img class="icon" src="icons/html.png">
 					</div>
 				</div>
 
@@ -216,8 +219,10 @@
 	<button onclick="topFunction()" id="to-top-btn" title="Go to top"><ion-icon name="chevron-up-outline"></ion-icon></button>
 
 	<footer>
-		<p>This website was built by @Yas_!_ru with HTML & CSS. Hosted on Github pages.</p>
+		<p>This website was built by Yas_!_ru with HTML, JavaScript & CSS. Hosted on Github pages.</p>
 	</footer>
+
+	<!-- Scripts -->
 
 	<script src="/ItsYasiru/scripts/index.js"></script>
 	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
