--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
 	<meta name="viewport" content="initial-scale=1, width=device-width, height=device-height">
 	<meta name="theme-color" content="#00FFFF">
 	<meta property="og:title" content="Yas_!_ru's Website">
-	<meta property="og:image" content="/ItsYasiru/images/favicon.png">
+	<meta property="og:image" content="./images/favicon.png">
 
 	<title>Yas_!_ru's Website</title>
 
 	<!-- Favicons -->
-	<link rel="stylesheet" href="/ItsYasiru/css/index.css">
-    <link rel="icon" href="/ItsYasiru/images/favicon.png" type="image/x-icon">
+	<link rel="stylesheet" href="./css/index.css">
+    <link rel="icon" href="./images/favicon.png" type="image/x-icon">
 
-	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<!-- Scripts -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-YDCFQGQZB8"></script>
+	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
 	<script>
 	    window.dataLayer = window.dataLayer || [];
 	    function gtag(){dataLayer.push(arguments);}
@@ -54,7 +57,7 @@
 		<div class="left-column">
 			<div id="about-me" class="card">
 				<h2>About Me</h2>
-				<center><img width=90% height=90% alt="Failed to load image!" src="images/profile-picture.jpg"></center>
+				<center><img class="profile-picture" width=90% height=90% alt="Failed to load image!" src="images/profile-picture.jpg"></center>
 				<p>
 					I'm 16 years old studying in high school for my 2023 GCE AL's at <a title="Respice Finem" href="https://www.trinitycollege.lk" target="_blank">Trinity College Kandy</a>.
 					<br><br>
@@ -76,7 +79,7 @@
 
 		<div class="right-column">
 			<div id="skill-set" class="card">
-				<div class="leftContainer">
+				<div class="left-column">
 					<h2>Skill Set</h2>
 					<p align="center">
 						These are my skills, what I'm good and bad at. Please note that this is work in progress.
@@ -84,15 +87,15 @@
 					<img title="Languages I've worked with ~ Github statistics" width=100% height=100% src="https://github-readme-stats.vercel.app/api/top-langs/?username=ItsYasiru&hide_title=true&layout=compact&hide_border=true">
 					<br><br>
 					<div align="center">
-						<img class="icon" src="icons/visual-studio-code.png">
-						<img class="icon" src="icons/python.png">
-						<img class="icon" src="icons/javascript.png">
-						<img class="icon" src="icons/css.png">
-						<img class="icon" src="icons/html.png">
+						<img class="icon" src="./icons/visual-studio-code.png">
+						<img class="icon" src="./icons/python.png">
+						<img class="icon" src="./icons/javascript.png">
+						<img class="icon" src="./icons/css.png">
+						<img class="icon" src="./icons/html.png">
 					</div>
 				</div>
 
-				<div class="rightContainer">
+				<div class="right-column">
 					<table>
 						<tr>
 							<th width="20%">Language</th>
@@ -134,14 +137,14 @@
 			</div>
 
 			<div id="projects" class="card">
-				<div class="leftContainer">
+				<div class="left-column">
 					<h2>Projects</h2>
 					<p align="center">
 						Projects that I contribute to/handle. Looking forward to contribute to Python, JavaScript projects.
 					</p>
 				</div>
 
-				<div class="rightContainer">
+				<div class="right-column">
 					<table>
 						<tr>
 							<th width="25%">Name</th>
@@ -170,21 +173,22 @@
 			</div>
 
 				<div id="fiverr" class="card">
-					<div class="leftContainer">
+					<div class="left-column">
 						<h2>Fiverr</h2>
 						<center>
 							<p>
 								An online market where I provide a few services as a freelancer.
 							</p>
-							<button title="Check out my Fiverr!">
+
 							<a target="_blank" href="https://www.fiverr.com/briefs/new?username=yas_i_ru">
-							<svg  title="Check out my Fiverr!" width="89" height="27" viewBox="0 0 89 27" fill="none" xmlns="http://www.w3.org/2000/svg"><g fill="#404145"><path d="m81.6 13.1h-3.1c-2 0-3.1 1.5-3.1 4.1v9.3h-6v-13.4h-2.5c-2 0-3.1 1.5-3.1 4.1v9.3h-6v-18.4h6v2.8c1-2.2 2.3-2.8 4.3-2.8h7.3v2.8c1-2.2 2.3-2.8 4.3-2.8h2zm-25.2 5.6h-12.4c.3 2.1 1.6 3.2 3.7 3.2 1.6 0 2.7-.7 3.1-1.8l5.3 1.5c-1.3 3.2-4.5 5.1-8.4 5.1-6.5 0-9.5-5.1-9.5-9.5 0-4.3 2.6-9.4 9.1-9.4 6.9 0 9.2 5.2 9.2 9.1 0 .9 0 1.4-.1 1.8zm-5.7-3.5c-.1-1.6-1.3-3-3.3-3-1.9 0-3 .8-3.4 3zm-22.9 11.3h5.2l6.6-18.3h-6l-3.2 10.7-3.2-10.8h-6zm-24.4 0h5.9v-13.4h5.7v13.4h5.9v-18.4h-11.6v-1.1c0-1.2.9-2 2.2-2h3.5v-5h-4.4c-4.3 0-7.2 2.7-7.2 6.6v1.5h-3.4v5h3.4z"></path></g><g fill="#1dbf73"><path d="m85.3 27c2 0 3.7-1.7 3.7-3.7s-1.7-3.7-3.7-3.7-3.7 1.7-3.7 3.7 1.7 3.7 3.7 3.7z"></path></g></svg>
+								<button class="theme-button" title="Check out my Fiverr!">
+									<svg  title="Check out my Fiverr!" width="89" height="27" viewBox="0 0 89 27" fill="none" xmlns="http://www.w3.org/2000/svg"><g fill="#404145"><path d="m81.6 13.1h-3.1c-2 0-3.1 1.5-3.1 4.1v9.3h-6v-13.4h-2.5c-2 0-3.1 1.5-3.1 4.1v9.3h-6v-18.4h6v2.8c1-2.2 2.3-2.8 4.3-2.8h7.3v2.8c1-2.2 2.3-2.8 4.3-2.8h2zm-25.2 5.6h-12.4c.3 2.1 1.6 3.2 3.7 3.2 1.6 0 2.7-.7 3.1-1.8l5.3 1.5c-1.3 3.2-4.5 5.1-8.4 5.1-6.5 0-9.5-5.1-9.5-9.5 0-4.3 2.6-9.4 9.1-9.4 6.9 0 9.2 5.2 9.2 9.1 0 .9 0 1.4-.1 1.8zm-5.7-3.5c-.1-1.6-1.3-3-3.3-3-1.9 0-3 .8-3.4 3zm-22.9 11.3h5.2l6.6-18.3h-6l-3.2 10.7-3.2-10.8h-6zm-24.4 0h5.9v-13.4h5.7v13.4h5.9v-18.4h-11.6v-1.1c0-1.2.9-2 2.2-2h3.5v-5h-4.4c-4.3 0-7.2 2.7-7.2 6.6v1.5h-3.4v5h3.4z"></path></g><g fill="#1dbf73"><path d="m85.3 27c2 0 3.7-1.7 3.7-3.7s-1.7-3.7-3.7-3.7-3.7 1.7-3.7 3.7 1.7 3.7 3.7 3.7z"></path></g></svg>
+								</button>
 							</a>
-							</button>
 						</center>
 					</div>
 
-					<div class="rightContainer">
+					<div class="right-column">
 						<table>
 							<tr>
 								<th width="20%">Item</th>
@@ -216,16 +220,10 @@
 		</div>
 	</row>
 
-	<button onclick="topFunction()" id="to-top-btn" title="Go to top"><ion-icon name="chevron-up-outline"></ion-icon></button>
-
 	<footer>
 		<p>This website was built by Yas_!_ru with HTML, JavaScript & CSS. Hosted on Github pages.</p>
 	</footer>
 
-	<!-- Scripts -->
-
-	<script src="/ItsYasiru/scripts/index.js"></script>
-	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+	<script src="./scripts/index.js"></script>
 </body>
 </html>
