Nothing to mention

--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
 			</div>
 
 			<div class="card" id="contact-info">
+				<h2>Get in touch</h2>
+
 				<table align="center" class="no-shadow">
 					<tr title="Email">
 						<td>Email</td>
@@ -93,7 +95,7 @@
 					</tr>
 					<tr title="Instagram">
 						<td>Instagram</td>
-						<td><a target="_blank" href="https://www.instagram.com/its.yasiru/">Its.Yasiru</a></td>
+						<td><a target="_blank" href="https://www.instagram.com/its.yasiru/">its.yasiru</a></td>
 					</tr>
 				</table>
 			</div>
@@ -181,7 +183,7 @@
 							<td>
 								Developer of "Ranked Bot".
 								The bot is capable of retrieving aggregated player statistics, match statistics & game replays served by a backend API.
-								More info <a href="https://ranked.ddns.net" target="_blank">https://ranked.ddns.net</a>
+								More info <a href="https://ranked.ddns.net" target="_blank"></a>
 							</td>
 						</tr>
 						<tr>
@@ -189,7 +191,7 @@
 								Line A Photography
 							</td>
 							<td>
-								<a href="https://line-a-photography.netlify.app" target="_blank">https://line-a-photography.netlify.app</a>
+								<a href="https://line-a-photography.netlify.app" target="_blank"></a>
 							</td>
 						</tr>
 					</table>
@@ -256,7 +258,12 @@
 							<td>GCE OL 2020</td>
 							<td>
 								Acquired 4A passes, 3B passes and 1C pass in English medium; Qualifying to write GCE ALs in 2023.
-								<table align="center" class="mini-table">
+							</td>
+						</tr>
+						<tr class="no-hover-effect">
+							<td></td>
+							<td align="center">
+								<table class="mini-table">
 									<tr>
 										<th>Subject</th>
 										<th>Grade</th>
