--- a/index.html
+++ b/index.html
@@ -2,18 +2,21 @@
 <html lang="en">
 <head>
 	<!-- Metadata -->
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="initial-scale=1, width=device-width, height=device-height">
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="initial-scale=1, width=device-width, height=device-height" />
 	<meta name="theme-color" content="#00FFFF">
-	<meta property="og:title" content="Yas_!_ru's Website">
-	<meta property="og:image" content="./images/favicon.png">
+	<meta property="og:title" content="Yas_!_ru's Website" />
+	<meta property="og:image" content="./images/favicon.png" />
 
 	<title>Yas_!_ru's Website</title>
 
+	<!-- Stylesheets -->
+	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+	<link rel="stylesheet" href="./styles/styles.css" />
+
 	<!-- Favicons -->
-	<link rel="stylesheet" href="./css/index.css">
-    <link rel="icon" href="./images/favicon.png" type="image/x-icon">
+    <link rel="icon" href="./images/favicon.png" type="image/x-icon" />
 
 	<!-- Scripts -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-YDCFQGQZB8"></script>
@@ -36,12 +39,12 @@
 
 	<!-- Header -->
 	<header>
-		<h1>Yas_!_ru's Website</h1>
-		<p id="lable">My name is Yasiru and I like to code as a hobby.</p>
+		<h1 data-aos="fade-up">Yas_!_ru's Website</h1>
+		<p data-aos="fade-up" id="lable">My name is Yasiru and I like to code as a hobby.</p>
 	</header>
 
 	<!-- Navigation bar -->
-	<nav id="menu">
+	<nav data-aos="fade-up" id="menu">
 		<button id="menu-close-btn" onclick="closeMenu()">&times;</button>
 
 		<a class="left" href="#about-me">About me</a>
@@ -54,12 +57,12 @@
 	</nav>
 
 	<!-- Content -->
-	<row>
+	<div class="row">
 		<!-- Left column -->
-		<div class="left-column">
+		<div data-aos="fade-right" class="left-column">
 			<div id="about-me" class="card">
 				<h2>About Me</h2>
-				<center><img class="profile-picture" width=90% height=90% alt="Failed to load image!" src="images/profile-picture.jpg"></center>
+				<img profile-picture alt="Failed to load image!" src="images/profile-picture.jpg">
 				<p>
 					I'm 16 years old studying in high school for my 2023 GCE AL's at <a title="Respice Finem" href="https://www.trinitycollege.lk" target="_blank">Trinity College Kandy</a>.
 					<br><br>
@@ -76,7 +79,7 @@
 			<div class="card" id="contact-info">
 				<h2>Get in touch</h2>
 
-				<table align="center" class="no-shadow">
+				<table no-shadow>
 					<tr title="Email">
 						<td>Email</td>
 						<td><a href="mailto:mwmykd@gmail.com">mwmykd@gmail.com</a></td>
@@ -100,10 +103,9 @@
 				</table>
 			</div>
 		</div>
-		<!-- End: Left column -->
 
 		<!-- Right column -->
-		<div class="right-column">
+		<div data-aos="fade-left" class="right-column">
 			<div id="skill-set" class="card">
 				<div class="left-column">
 					<h2>Skill Set</h2>
@@ -112,12 +114,12 @@
 					</p>
 					<img title="Languages I've worked with ~ Github statistics" width=100% height=100% src="https://github-readme-stats.vercel.app/api/top-langs/?username=ItsYasiru&hide_title=true&layout=compact&hide_border=true">
 					<br><br>
-					<div align="center">
-						<img class="icon" src="./icons/visual-studio-code.png">
-						<img class="icon" src="./icons/python.png">
-						<img class="icon" src="./icons/javascript.png">
-						<img class="icon" src="./icons/css.png">
-						<img class="icon" src="./icons/html.png">
+					<div>
+						<img icon src="./icons/visual-studio-code.png">
+						<img icon src="./icons/python.png">
+						<img icon src="./icons/javascript.png">
+						<img icon src="./icons/css.png">
+						<img icon src="./icons/html.png">
 					</div>
 				</div>
 
@@ -201,17 +203,13 @@
 			<div id="fiverr" class="card">
 				<div class="left-column">
 					<h2>Fiverr</h2>
-						<p>
-							An online market where I provide a few services as a freelancer.
-						</p>
+					<p>An online market where I provide a few services as a freelancer.</p>
 
-					<center>
-						<a target="_blank" href="https://www.fiverr.com/briefs/new?username=yas_i_ru">
-							<button class="theme-button" title="Check out my Fiverr!">
-								<svg  title="Check out my Fiverr!" width="89" height="27" viewBox="0 0 89 27" fill="none" xmlns="http://www.w3.org/2000/svg"><g fill="#404145"><path d="m81.6 13.1h-3.1c-2 0-3.1 1.5-3.1 4.1v9.3h-6v-13.4h-2.5c-2 0-3.1 1.5-3.1 4.1v9.3h-6v-18.4h6v2.8c1-2.2 2.3-2.8 4.3-2.8h7.3v2.8c1-2.2 2.3-2.8 4.3-2.8h2zm-25.2 5.6h-12.4c.3 2.1 1.6 3.2 3.7 3.2 1.6 0 2.7-.7 3.1-1.8l5.3 1.5c-1.3 3.2-4.5 5.1-8.4 5.1-6.5 0-9.5-5.1-9.5-9.5 0-4.3 2.6-9.4 9.1-9.4 6.9 0 9.2 5.2 9.2 9.1 0 .9 0 1.4-.1 1.8zm-5.7-3.5c-.1-1.6-1.3-3-3.3-3-1.9 0-3 .8-3.4 3zm-22.9 11.3h5.2l6.6-18.3h-6l-3.2 10.7-3.2-10.8h-6zm-24.4 0h5.9v-13.4h5.7v13.4h5.9v-18.4h-11.6v-1.1c0-1.2.9-2 2.2-2h3.5v-5h-4.4c-4.3 0-7.2 2.7-7.2 6.6v1.5h-3.4v5h3.4z"></path></g><g fill="#1dbf73"><path d="m85.3 27c2 0 3.7-1.7 3.7-3.7s-1.7-3.7-3.7-3.7-3.7 1.7-3.7 3.7 1.7 3.7 3.7 3.7z"></path></g></svg>
-							</button>
-						</a>
-					</center>
+					<a target="_blank" href="https://www.fiverr.com/briefs/new?username=yas_i_ru">
+						<button class="theme-button" title="Check out my Fiverr!">
+							<svg  title="Check out my Fiverr!" width="89" height="27" viewBox="0 0 89 27" fill="none" xmlns="http://www.w3.org/2000/svg"><g fill="#404145"><path d="m81.6 13.1h-3.1c-2 0-3.1 1.5-3.1 4.1v9.3h-6v-13.4h-2.5c-2 0-3.1 1.5-3.1 4.1v9.3h-6v-18.4h6v2.8c1-2.2 2.3-2.8 4.3-2.8h7.3v2.8c1-2.2 2.3-2.8 4.3-2.8h2zm-25.2 5.6h-12.4c.3 2.1 1.6 3.2 3.7 3.2 1.6 0 2.7-.7 3.1-1.8l5.3 1.5c-1.3 3.2-4.5 5.1-8.4 5.1-6.5 0-9.5-5.1-9.5-9.5 0-4.3 2.6-9.4 9.1-9.4 6.9 0 9.2 5.2 9.2 9.1 0 .9 0 1.4-.1 1.8zm-5.7-3.5c-.1-1.6-1.3-3-3.3-3-1.9 0-3 .8-3.4 3zm-22.9 11.3h5.2l6.6-18.3h-6l-3.2 10.7-3.2-10.8h-6zm-24.4 0h5.9v-13.4h5.7v13.4h5.9v-18.4h-11.6v-1.1c0-1.2.9-2 2.2-2h3.5v-5h-4.4c-4.3 0-7.2 2.7-7.2 6.6v1.5h-3.4v5h3.4z"></path></g><g fill="#1dbf73"><path d="m85.3 27c2 0 3.7-1.7 3.7-3.7s-1.7-3.7-3.7-3.7-3.7 1.7-3.7 3.7 1.7 3.7 3.7 3.7z"></path></g></svg>
+						</button>
+					</a>
 				</div>
 
 				<div class="right-column">
@@ -260,10 +258,10 @@
 								Acquired 4A passes, 3B passes and 1C pass in English medium; Qualifying to write GCE ALs in 2023.
 							</td>
 						</tr>
-						<tr class="no-hover-effect">
+						<tr no-hover-effect>
 							<td></td>
-							<td align="center">
-								<table class="mini-table">
+							<td>
+								<table class="mini-table center">
 									<tr>
 										<th>Subject</th>
 										<th>Grade</th>
@@ -315,14 +313,19 @@
 				</div>
 			</div>
 		</div>
-		<!-- End: Right column -->
-	</row>
+	</div>
 
+	<!-- Footer -->
 	<footer>
 		<p>This website was built by Yas_!_ru with HTML, JavaScript & CSS. Hosted on Github pages.</p>
 	</footer>
 
 	<!-- Scripts -->
+	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+
+    <script>
+        AOS.init();
+    </script>
 	<script src="./scripts/index.js"></script>
 </body>
 </html>
