--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
 
     <div class="container">
         <div class="row">
-            <div class="left-column col-sm-12 col-xl-4">
+            <div class="left-column col-md-12 col-xl-4">
                 <div id="about-me" class="lgt-card">
                     <h2>About me</h2>
-                    <img class="profile-pic" src="./assets/images/profile-picture.jpg">
+                    <div class="profile-pic">
+                        <img src="./assets/images/profile-picture.jpg">
+                    </div>
                     <p text-align="left">
                         I'm 16 years old studying in high school for my GCE AL's at <a title="Respice Finem" href="https://www.trinitycollege.lk" target="_blank">Trinity College Kandy</a>.
                         Got into programming with the pandemic lockdown, after meeting another developer.
@@ -75,7 +77,7 @@
                 </div>
             </div>
 
-            <div class="right-column col-sm-12 col-xl-8">
+            <div class="right-column col-md-12 col-xl-8">
                 <div id="skill-set" class="lgt-card">
                     <h2>Skill Set</h2>
                     <p>
