--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                         Since then I've been coding a lot mostly in python and improving in other languages too.
                         <br><br>
                         I've learned a lot just by self-studying, reading articles, docs, & talking to everyone that I've met.
+                        Special thanks to
+                        <a _target="_blank" href="https://www.linkedin.com/in/leonid-skorospelov">Leonid</a>,
+                        <a _target="_blank" href="https://www.linkedin.com/in/kelum-dhananjaya-460a4298/">Kellum</a>.
                         Currently an intern full stack developer at <a _target="_blank" href="https://www.domedia.lk">DoMedia.lk</a>
                     </p>
                 </div>
