--- a/index.html
+++ b/index.html
@@ -27,22 +27,24 @@
 </head>
 
 <body>
-    <header>
-        <h1>Yas_!_ru's Website</h1>
-        <p><i class="fas fa-terminal"></i> console.log( "No I'm not gonna fix your printer." );</p>
+    <header style="background-image: url('./assets/images/header-background.png');">
+        <div class="content">
+            <h1>Yas_!_ru's Website</h1>
+            <p><i class="fas fa-terminal"></i> console.log( "No I'm not gonna fix your printer." );</p>
+        </div>
     </header>
 
     <nav class="container">
         <div class="left">
-            <a class="nav-button" href="#about-me">About me</a>
-            <a class="nav-button" href="#skill-set">Skill set</a>
-            <a class="nav-button" href="#projects">Projects</a>
-            <a class="nav-button" href="#fiverr">Fiverr</a>
-            <a class="nav-button" href="#qualifications">Qualifications</a>
+            <a class="trp-button" href="#about-me">About me</a>
+            <a class="trp-button" href="#skill-set">Skill set</a>
+            <a class="trp-button" href="#projects">Projects</a>
+            <a class="trp-button" href="#fiverr">Fiverr</a>
+            <a class="trp-button" href="#qualifications">Qualifications</a>
         </div>
 
         <div class="right">
-            <a class="nav-button" href="#contact-info">Get in touch</a>
+            <a class="trp-button" href="#contact-info">Get in touch</a>
         </div>
     </nav>
 
@@ -56,26 +58,25 @@
                     </div>
                     <p text-align="left">
                         I'm 16 years old studying in high school for my GCE AL's at <a title="Respice Finem" href="https://www.trinitycollege.lk" target="_blank">Trinity College Kandy</a>.
-                        Got into programming with the pandemic lockdown, after meeting another developer.
-                        Since then I've been coding a lot mostly in python and improving in other languages too.
+                        I got into programming with the pandemic lockdown, after meeting another developer who suggested me to learn some coding.
+                        Since then I've been coding a lot, mostly in Python and JavaScript.
                         <br><br>
                         I've learned a lot just by self-studying, reading articles, docs, & talking to everyone that I've met.
                         Special thanks to
                         <a _target="_blank" href="https://www.linkedin.com/in/leonid-skorospelov">Leonid</a>,
-                        <a _target="_blank" href="https://www.linkedin.com/in/kelum-dhananjaya-460a4298/">Kellum</a>.
-                        Currently an intern full stack developer at <a _target="_blank" href="https://www.domedia.lk">DoMedia.lk</a>
+                        <a _target="_blank" href="https://www.linkedin.com/in/kelum-dhananjaya-460a4298/">Kellum</a> for their time and advice.
                     </p>
                 </div>
 
                 <div id="contact-info" class="lgt-card">
                     <h2>Get in touch</h2>
 
-                    <div class="socials-bar">
-                        <a href="mailto:mwmykd@gmail.com"><i class="fas fa-at"></i><label>mwmykd@gmail.com</label></a>
-                        <a href="discord:https://discord.com/users/837258955415748639"><i class="fab fa-discord"></i><label>Yas_!_ru#9999</label></a>
-                        <a target="_blank" href="https://wa.me/qr/6SNFWKYZ4CYFD1"><i class="fab fa-whatsapp"></i><label>+94 71 994 5826</label></a>
-                        <a target="_blank" href="https://github.com/ItsYasiru"><i class="fab fa-github-alt"></i><label>ItsYasiru</label></a>
-                        <a target="_blank" href="https://www.instagram.com/its.yasiru/"><i class="fab fa-instagram"></i><label>its.yasiru</label></a>
+                    <div class="lgt-socials-bar">
+                        <a title="Email" href="mailto:mwmykd@gmail.com"><i class="fas fa-at"></i><label>mwmykd@gmail.com</label></a>
+                        <a title="Telephone" href="tel:+94 71 994 5826"><i class="fas fa-mobile-alt"></i><label>+94 71 994 5826</label></a>
+                        <a title="Discord" href="discord:https://discord.com/users/837258955415748639"><i class="fab fa-discord"></i><label>Yas_!_ru#9999</label></a>
+                        <a title="Github" target="_blank" href="https://github.com/ItsYasiru"><i class="fab fa-github-alt"></i><label>ItsYasiru</label></a>
+                        <a title="Instagram" target="_blank" href="https://www.instagram.com/its.yasiru/"><i class="fab fa-instagram"></i><label>its.yasiru</label></a>
                     </div>
                 </div>
             </div>
@@ -85,17 +86,17 @@
                     <h2>Skill Set</h2>
                     <p>
                         This is my skill set, what I'm good and bad at.
-                        Please note that this is work in progress, still have a lot to learn and cover.
+                        Please note that this is work in progress, I still have a lot to learn and cover.
                     </p>
 
                     <table center-col="2" class="lgt-table">
                         <tr>
-                            <th width="20%">Language</th>
+                            <th width="20%">Skill</th>
                             <th width="15%">Level</th>
                             <th width="65%">Extra</th>
                         </tr>
                         <tr>
-                            <td>Python</td>
+                            <td>Python<label st="lang"></label></td>
                             <td>Expert</td>
                             <td>
                                 This is the laguage I've used the most.
@@ -105,40 +106,40 @@
                             </td>
                         </tr>
                         <tr>
-                            <td>CSS & HTML</td>
+                            <td>CSS & HTML<label st="lang"></label></td>
                             <td>Expert</td>
                             <td>
                                 I can build & design good looking static websites.
-                                Familiar with Bootstrap.
+                                I'm familiar with Bootstrap & SASS usage.
                             </td>
                         </tr>
                         <tr>
-                            <td>Server Management</td>
+                            <td>Server Management<label st="skill"></label></td>
                             <td>Intermediate</td>
-                            <td>Have experience with handling Linux servers & Process management.</td>
+                            <td>I have experience with handling Linux servers & Process management. I'm familiar with SSH & FTP usage.</td>
                         </tr>
                         <tr>
-                            <td>Databases</td>
+                            <td>Databases<label st="skill"></label></td>
                             <td>Intermediate</td>
-                            <td>So far I've worked with Mongo db and PostgreSQL.</td>
+                            <td>So far I've worked with Mongo DB and PostgreSQL.</td>
                         </tr>
                         <tr>
-                            <td>Javascript</td>
+                            <td>Javascript<label st="lang"></label></td>
                             <td>Intermediate</td>
                             <td>
-                                Currently working on Node.js and Angular.
-                                Familiar with JQuery and few other web development plugins.
+                                Currently learning on Node.js and Angular.
+                                Familiar with JQuery and few other web development plugins usage.
                             </td>
                         </tr>
                         <tr>
-                            <td>PHP</td>
+                            <td>PHP<label st="lang"></label></td>
                             <td>Beginner</td>
                             <td>Just getting started.</td>
                         </tr>
                         <tr>
-                            <td>Wordpress</td>
+                            <td>Wordpress<label st="fram"></label></td>
                             <td>Beginner</td>
-                            <td>Currently working on theme development.</td>
+                            <td>Currently learning about theme development.</td>
                         </tr>
                     </table>
                 </div>
@@ -165,7 +166,7 @@
                                 More info <a href="https://ranked.ddns.net" target="_blank"></a>
                             </td>
                         </tr>
-                        <tr>
+                        <tr hidden>
                             <td>
                                 Line A Photography
                             </td>
@@ -178,7 +179,10 @@
 
                 <div id="fiverr" class="lgt-card">
                     <h2>Fiverr</h2>
-                    <p>An online market where I provide a few services as a freelancer.</p>
+                    <p>
+                        An online market where I provide a few services as a freelancer.
+                        Feel free to <a href="#contact-info">contact me</a> for any inqueries.
+                    </p>
 
                     <table center-col="1" class="lgt-table"s>
                         <tr>
@@ -188,20 +192,41 @@
                         <tr>
                             <td>
                                 <a title="Fiverr" target="_blank" href="https://www.fiverr.com/share/w239aB">A Discord bot</a>
+                                <label>10$ - 20$</label>
                             </td>
                             <td>
-                                I will develop a discord bot to do anything that can be done on discord with a bot, the way you need it to be done.
-                                I can get anything from Giveaways, Moderation, Music, Leveling, Welcome messages, Registration forms, Data queries, Auto roles done for you.
+                                <ul>
+                                    <li>A discord bot to do anything that can be done on discord, just the way you want it.</li>
+                                    <li>I can get anything done for you from the list below and if it's not there let me know.
+                                        <ul>
+                                            <li>Giveaways</li>
+                                            <li>Moderation</li>
+                                            <li>Music</li>
+                                            <li>Leveling</li>
+                                            <li>Welcome messages</li>
+                                            <li>Registration forms</li>
+                                            <li>Auto roles</li>
+                                        </ul>
+                                        <li>
+                                            Discord is really flexible and their API provides the same functionality of a stadard user.
+                                            Almost anything a stadard user can do can be automated with a bot.
+                                        </li>
+                                    </li>
+                                </ul>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <a title="Fiverr" target="_blank" href="https://www.fiverr.com/share/NEoQvp">A static Website</a>
+                                <a title="Fiverr" target="_blank" href="https://www.fiverr.com/share/NEoQvp">A Static Website</a>
+                                <label>5$</label>
                             </td>
                             <td>
-                                I will design and build you a beautiful website that will look good on Tablets, Computers & Mobile devices.
-                                I will revise and rework it till you are 100% satisfied.
-                                I ensure you that the final product will look and function just the way you want it to.
+                                <ul>
+                                    <li>A <a href="https://en.wikipedia.org/wiki/Responsive_web_design" target="_blank">responsive</a> static website.</li>
+                                    <li>Recommended for portfolio & information like websites with one page.</li>
+                                    <li>I ensure you that the final product will look and function just the way you want it to.</li>
+                                    <li>I will revise and rework it till you are 100% satisfied in accordance with the design.</li>
+                                </ul>
                             </th>
                         </tr>
                     </table>
@@ -262,14 +287,14 @@
                                     </tr>
                                     <tr>
                                         <td>Drama & Theatre</td>
-                                        <td>-</td>
+                                        <td></td>
                                     </tr>
                                 </table>
                             </td>
                         </tr>
                         <tr>
                             <td>GCE AL 2023</td>
-                            <td>-</td>
+                            <td></td>
                         </tr>
                     </table>
                 </div>
